<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <DUT Name="ST_SEC_ZXX7_ActiveExceptions" Id="{849d8a37-1509-02c9-190d-d4fc8bfe6ac8}">
    <Declaration><![CDATA[TYPE ST_SEC_ZXX7_ActiveExceptions :
STRUCT
	DeviceWarning		: BOOL;
	DeviceError			: BOOL;
	ManufacturerWarning	: BOOL;
	ManufacturerError	: BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>