<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <DUT Name="ST_SEC_ZXX7_Commands" Id="{c9ed1593-7c43-0c9c-093c-7b17eebfe356}">
    <Declaration><![CDATA[TYPE ST_SEC_ZXX7_Commands EXTENDS ST_MfcCommands :
STRUCT
	RampTime	: T_SEC_ZXXX7_RampTime; // Ramp time setpoint in ms	
	Mode		: E_SEC_ZXX7_ActuatorControl;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>