<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <DUT Name="ST_SEC_ZXX7_Inputs" Id="{12c0319a-121d-00d7-1645-91928ccb941b}">
    <Declaration><![CDATA[TYPE ST_SEC_ZXX7_Inputs :
STRUCT
	ValvePosition	: REAL;
	ActualFlow		: REAL;
	ExceptionStatus	: T_SEC_ZXX7_ActiveExceptionStatus;
	AmsAddr			: Tc2_System.ST_AmsAddr;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>